--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,3 @@
-$("#<%= dom_id(@like) %>").replaceWith("#<%= dom_id(@like.photo) %>_<%= dom_id(@like) %>_delete");
+$("#<%= dom_id(@like.photo) %>_likes").replaceWith("<%= j(render "photos/likes", photo: @like.photo) %>");
+
+$("#<%= dom_id(@like.fan) %>_likes_count").replaceWith("<%= j(render "users/profile_nav/likes_count", user: @like.fan) %>");
