--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -25,29 +25,11 @@
   
   <div class="card-body">
     <div class="mb-3 d-flex justify-content-between">
-      <div class="d-flex align-items-baseline">
-        <%= pluralize(photo.likes_count, "like") %>
-
-        <% like = current_user.likes.find_by(photo: photo) %>
-
-        <% if like %>
-          <div id="<%= dom_id(like) %>" >  
-            <%= link_to like, class: "btn btn-link", method: :delete, remote: true do %>
-              <i class="fas fa-heart fa-fw"></i>
-
-              Un-like
-            <% end %> 
-          </div>
-        <% else %>
-          <%= render "likes/form", like: photo.likes.build(fan: current_user) %>
-        <% end %>
-      </div>
-
-      <div>
-        <% unless policy(photo).show? %>
-          <%= render "follow_requests/follow_unfollow", recipient: photo.owner %>
-        <% end %>
-      </div>
+      <%= render "photos/likes", photo: photo %>
+      
+      <% unless policy(photo).show? %>
+        <%= render "follow_requests/follow_unfollow", recipient: photo.owner %>
+      <% end %>
     </div>
     
 
